--- a/gamkrib/package.json
+++ b/gamkrib/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "formik": "^2.2.9",
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,7 +17,8 @@
     "styled-components": "^5.3.6",
     "swiper": "^9.0.5",
     "web-vitals": "^2.1.0",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
