--- a/gamkrib/package.json
+++ b/gamkrib/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^9.0.5",
     "web-vitals": "^2.1.0",
     "webfontloader": "^1.6.28",
