--- a/gamkrib/package.json
+++ b/gamkrib/package.json
@@ -15,6 +15,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
