--- a/gamkrib/package.json
+++ b/gamkrib/package.json
@@ -6,8 +6,10 @@
     "@coreui/coreui": "^4.2.6",
     "@coreui/react": "^4.6.0",
     "@syncfusion/ej2-base": "^21.2.3",
+    "@syncfusion/ej2-react-buttons": "^21.2.3",
     "@syncfusion/ej2-react-charts": "^21.2.4",
     "@syncfusion/ej2-react-grids": "^21.2.4",
+    "@syncfusion/ej2-react-layouts": "^21.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
