--- a/gamkrib/package.json
+++ b/gamkrib/package.json
@@ -9,7 +9,9 @@
     "@syncfusion/ej2-react-buttons": "^21.2.3",
     "@syncfusion/ej2-react-charts": "^21.2.4",
     "@syncfusion/ej2-react-grids": "^21.2.4",
+    "@syncfusion/ej2-react-inputs": "^21.2.8",
     "@syncfusion/ej2-react-layouts": "^21.2.3",
+    "@syncfusion/ej2-react-popups": "^21.2.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
