--- a/gamkrib/package.json
+++ b/gamkrib/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.4.0",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
