--- a/gamkrib/package.json
+++ b/gamkrib/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "@coreui/coreui": "^4.2.6",
     "@coreui/react": "^4.6.0",
+    "@emotion/react": "^11.11.1",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@mantine/core": "^6.0.19",
+    "@mantine/dropzone": "^6.0.19",
+    "@mantine/hooks": "^6.0.19",
     "@syncfusion/ej2-base": "^21.2.3",
     "@syncfusion/ej2-react-buttons": "^21.2.3",
     "@syncfusion/ej2-react-charts": "^21.2.4",
@@ -13,6 +17,7 @@
     "@syncfusion/ej2-react-inputs": "^21.2.8",
     "@syncfusion/ej2-react-layouts": "^21.2.3",
     "@syncfusion/ej2-react-popups": "^21.2.4",
+    "@tabler/icons-react": "^2.32.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
