--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.21.0",
     "@coreui/coreui": "^4.2.6",
     "@coreui/react": "^4.6.0",
     "@emotion/react": "^11.11.1",
